--- a/citus-nodes/Dockerfile
+++ b/citus-nodes/Dockerfile
@@ -15,6 +15,7 @@ RUN apk add --no-cache \
         curl \
         curl-dev \
         openssl-dev \
+        openssh \
         ca-certificates \
         clang \
         llvm \
@@ -36,7 +37,8 @@ RUN echo "shared_preload_libraries='citus'" >> /usr/local/share/postgresql/postg
 COPY 001-create-citus-extension.sql /docker-entrypoint-initdb.d/
 
 # add health check script
-COPY pg_healthcheck /
+COPY pg_healthcheck wait-for-manager.sh /
+RUN chmod +x /wait-for-manager.sh
 
 # entry point unsets PGPASSWORD, but we need it to connect to workers
 # https://github.com/docker-library/postgres/blob/33bccfcaddd0679f55ee1028c012d26cd196537d/12/docker-entrypoint.sh#L303
