--- a/membership-manager/Dockerfile
+++ b/membership-manager/Dockerfile
@@ -17,4 +17,4 @@ HEALTHCHECK --interval=1s --start-period=1s CMD /bin/sh -c 'test -f /healthcheck
 
 # -u necessary to flush logging to docker in a timely manner
 #CMD [ "python", "-u", "./manager.py"]
-CMD ["/bin/bash", "-c","sleep 60000 && python -u ./manager.py"]
+CMD ["/bin/sh", "-c","touch /healthcheck/manager-ready && sleep 60000 && python -u ./manager.py"]
