--- a/citus-worker/Dockerfile
+++ b/citus-worker/Dockerfile
@@ -1,6 +1,6 @@
 FROM arm32v7/postgres:12.3-alpine
 ARG VERSION=9.4.0
-LABEL maintainer="Citus Data https://citusdata.com" \
+LABEL maintainer="lucas-fs - lferreira@inf.ufsm.br" \
       org.label-schema.name="Citus" \
       org.label-schema.description="Scalable PostgreSQL for multi-tenant and real-time workloads" \
       org.label-schema.url="https://www.citusdata.com" \
@@ -32,18 +32,15 @@ RUN apk add --no-cache \
 # add citus to default PostgreSQL config
 RUN echo "shared_preload_libraries='citus'" >> /usr/local/share/postgresql/postgresql.conf.sample
 
-# disable ssl
-RUN sed -i 's/#ssl = off/ssl = off/' /usr/local/share/postgresql/postgresql.conf.sample
-
 # add scripts to run after initdb
 COPY 001-create-citus-extension.sql /docker-entrypoint-initdb.d/
 
-# add health check script
-COPY pg_healthcheck wait-for-manager.sh /
-RUN chmod +x /wait-for-manager.sh
+# add boot check script
+COPY boot-check.sh /
+RUN chmod +x /boot-check.sh
 
 # entry point unsets PGPASSWORD, but we need it to connect to workers
 # https://github.com/docker-library/postgres/blob/33bccfcaddd0679f55ee1028c012d26cd196537d/12/docker-entrypoint.sh#L303
 RUN sed "/unset PGPASSWORD/d" -i /usr/local/bin/docker-entrypoint.sh
 
-HEALTHCHECK --interval=4s --start-period=6s CMD ./pg_healthcheck
+CMD ["/bin/bash", "-c", "/boot-check.sh"]
