--- a/membership-manager/Dockerfile
+++ b/membership-manager/Dockerfile
@@ -12,5 +12,10 @@ RUN apk add --no-cache \
 
 ADD manager.py /
 
+# add boot check script
+COPY boot-check.sh /
+RUN chmod +x /boot-check.sh
+
 # -u in python is necessary to flush logging to docker in a timely manner
 CMD ["/bin/sh", "-c", "/boot-check.sh && python -u ./manager.py"]
+
