Clean DocWorker Derfile and fix boot-ckeck script bugs

--- a/membership-manager/Dockerfile
+++ b/membership-manager/Dockerfile
@@ -1,13 +1,16 @@
-FROM python:3.9.6-alpine3.14
+# This Docker image is an adaptation based on the official files 
+# from Citus project GitHub repository: https://github.com/citusdata/membership-manager
 
-RUN apk add --no-cache \
-            --virtual psycodeps \
-        gcc \
-        musl-dev \
-        postgresql-dev \
-        postgresql-client \
-        python3-dev && \
-    pip install docker psycopg2 && \
+FROM python:3-alpine
+
+LABEL maintainer="github.com/lucas-fs"
+
+RUN apk add --no-cache --virtual psycodeps \
+    gcc \
+    musl-dev \
+    postgresql-dev \
+    python3-dev && \
+    pip install docker psycopg2 six && \
     apk add --no-cache libpq && \
     apk del psycodeps
 
@@ -19,4 +22,3 @@ RUN chmod +x /boot-check.sh
 
 # -u in python is necessary to flush logging to docker in a timely manner
 CMD ["/bin/sh", "-c", "/boot-check.sh && python -u ./manager.py"]
-
