Clean Workers Dockerfile and fix boot-ckeck script bugs

--- a/citus-worker/Dockerfile
+++ b/citus-worker/Dockerfile
@@ -1,5 +1,7 @@
 FROM lucasfs/citus-coordinator-armhf
 
+LABEL maintainer="github.com/lucas-fs"
+
 # add boot check script
 COPY boot-check.sh /
 RUN chmod +x /boot-check.sh
